--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "eslint-plugin-vue": "^7.0.0-0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
+    "pug": "^3.0.0",
+    "pug-plain-loader": "^1.0.0",
+    "sass": "^1.26.5",
     "typescript": "~3.9.3"
   }
 }
